package ar.edu.utn.frba.dds.domain.definirPackages;

import java.util.List;

public class Tarjeta {

  private String codigo;
  private List<UsoDeTarjeta> historialUsos;
  private PersonaVulnerable titular;
}
